# turboterm

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  USAGE.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: calculator.py  combined.py  deploy_tool.py  formatted_help.py  hello_cli.py  server_cli.py  styled_output.py
scripts/: benchmark.py
src/: cli.rs  lexer.rs  lib.rs  table.rs
tests/: test_cli.py  test_console.py  test_examples.py  test_lexer.py  test_styled_table.py  test_table.py
turboterm/: __init__.py  __init__.pyi  cli.py  console.py
turboterm/turboterm/: __init__.pyi
