[package]
name = "turboterm"
version = "0.1.0"
edition = "2021"

[lib]
name = "turboterm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
clap = { version = "4.0", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "string"] }
comfy-table = { version = "7.2.2", default-features = false, features = ["custom_styling"] }

[profile.release]
strip = true
lto = true
