[package]
name = "turboterm"
version = "0.1.0"
edition = "2021"

[lib]
name = "turboterm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module", "abi3-py311"] }
clap = { version = "4.0", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "string"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
