[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turboterm"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[tool.maturin]
stubgen = true

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes — unused imports, undefined names, etc.
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort — import ordering
    "UP",    # pyupgrade — modern Python syntax
    "B",     # flake8-bugbear — common bugs and design problems
    "SIM",   # flake8-simplify — simplifiable code
    "RUF",   # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["turboterm"]
